refactor(produtos): migrar ProductController e ProductService para uso de DTOs e IDs string, atualizar configuração do MongoDB e remover padrão de repositório

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -6,8 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "MongoDbSettings": {
-    "ConnectionString": "mongodb+srv://victorhcarracci_db_user:I8lEbAwdVSOiKtKp@hypesoft-challenge.talhdnm.mongodb.net/?retryWrites=true&w=majority&appName=hypesoft-challenge",
-    "Database": "HypesoftDb"
+  "MongoDB": {
+    "ConnectionURI": "mongodb+srv://victorhcarracci_db_user:LMyNlUP9CcpPVxsW@hypesoft-challenge.talhdnm.mongodb.net/?retryWrites=true&w=majority&appName=hypesoft-challenge",
+    "DatabaseName": "ProductDb",
+    "CollectionName": "ProductList"
   }
 }
