--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDB": {
-    "ConnectionURI": "mongodb+srv://victorhcarracci_db_user:I8lEbAwdVSOiKtKp@hypesoft-challenge.talhdnm.mongodb.net/?retryWrites=true&w=majority&appName=hypesoft-challenge",
+    "ConnectionURI": "mongodb+srv://victorhcarracci_db_user:LMyNlUP9CcpPVxsW@hypesoft-challenge.talhdnm.mongodb.net/?retryWrites=true&w=majority&appName=hypesoft-challenge",
     "DatabaseName": "ProductDb",
     "CollectionName": "ProductList"
   }
