feat: atualizar as configurações de conexão do MongoDB para usar variáveis ​​de ambiente; adicionar configuração do Docker Compose para serviços

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "MongoDB": {
-    "ConnectionURI": "mongodb+srv://victorhcarracci_db_user:LMyNlUP9CcpPVxsW@hypesoft-challenge.talhdnm.mongodb.net/?retryWrites=true&w=majority&appName=hypesoft-challenge",
-    "DatabaseName": "ProductDb",
-    "CollectionName": "ProductList"
+    "ConnectionURI": "${MONGODB_URI}",
+    "DatabaseName": "${MONGODB_DATABASE}",
+    "CollectionName": "${MONGODB_COLLECTION}"
   }
 }
