feat: atualizar configurações do MongoDB para usar variáveis de ambiente; ajustar o Docker Compose para integração com PostgreSQL e Keycloak; melhorar a responsividade do Sidebar e ProductTable

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "MongoDB": {
-    "ConnectionURI": "${MONGODB_URI}",
-    "DatabaseName": "${MONGODB_DATABASE}",
-    "CollectionName": "${MONGODB_COLLECTION}"
+    "ConnectionURI": "",
+    "DatabaseName": "",
+    "CollectionName": ""
   }
 }
