--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "MongoDB": {
-    "ConnectionURI": "${MONGODB_URI}",
-    "DatabaseName": "${MONGODB_DATABASE}",
-    "CollectionName": "${MONGODB_COLLECTION}"
+    "ConnectionURI": "",
+    "DatabaseName": "",
+    "CollectionName": ""
   }
 }
